--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,9 +2,10 @@
   width: 100%;
   height: 50px;
   margin: 57px 0 0;
-  padding-top: 57px;
   display: block;
   color: #fff;
+  cursor: pointer;
+  opacity: .8;
   text-align: center;
   background-color: #000;
   font-family: 'Inter', Arial, sans-serif;
@@ -12,6 +13,5 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
-  cursor: pointer;
-  opacity: 0.8;
+  z-index: 1;
 }
