--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,14 @@
 .popup {
   width: 100%;
   height: 100vh;
+  padding: 0;
+  margin: 0;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #000;
-  opacity: .5;
-  display: none;
+  background-color: rgba(0,0,0, .5);
+  display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 0;
+  visibility: hidden;
 }
