--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,25 +1,25 @@
 .footer {
   max-width: 880px;
-  padding: 66px 0 50px;
+  padding: 65px 0 60px;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 1000px) {
   .footer {
-    padding: 48px 0;
+    padding: 55px 0 45px;
   }
 }
 
 @media screen and (max-width: 560px) {
   .footer {
-    padding: 36px 0;
+    padding: 50px 0 40px;
   }
 }
 
 @media screen and (max-width: 450px) {
   .footer  {
     max-width: 100%;
-    padding: 28px 0px;
+    padding: 45px 0px 35px;
     margin: 0;
   }
 }
