--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,23 +1,31 @@
 .page {
   margin: 0 auto;
   padding: 0;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   text-rendering: optimizeLegibility;
   color:#fff;
   background-color: #000;
   box-sizing: border-box;
 }
 
-
-@media screen and (max-width: 1000px) {
-  .page  {
-    max-width: calc(100% - 38px);
+@media screen and (max-width:1280px) {
+  .page {
+    max-width: 1280px;
+  }
+}
+@media screen and (max-width:1024px) {
+  .page {
+    max-width: 1024px;
+  }
+}
+@media screen and (max-width:768px) {
+  .page {
+    max-width: 768px;
   }
 }
 
-@media screen and (max-width: 450px) {
-  .content  {
+ @media screen and (max-width:375px) {
+  .page {
     max-width: 100%;
-    margin: 0;
   }
 }
