--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,22 +1,23 @@
 .popup__close {
-  width: 50px;
-  height: 50px;
+  width: 32px;
+  height: 32px;
   padding: 0;
   position: absolute;
-  top: -45px;
-  right: -42px;
+  top: -40px;
+  right: -40px;
   background-color: transparent;
   border: none;
   background-image: url(../../../images/button-close.svg);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  transition: opacity .3s ease-in;
+  transition: opacity .3s ease-in-out;
 }
 
 .popup__close:hover {
   cursor: pointer;
   opacity: .6;
+  transform: rotate(65deg);
 }
 
 .popup__close:focus {
@@ -25,20 +26,17 @@
   border-radius: 2px;
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-width: 600px) {
   .popup__close {
-    width: 30px;
-    height: 30px;
-    top: -26px;
-    right: -26px;
+    top: -40px;
+    right: 0px;
   }
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 320px) {
   .popup__close {
-    width: 30px;
-    height: 30px;
-    top: -26px;
-    right: -26px;
+    width: 20px;
+    height: 20px;
+    top: -30px;
   }
 }
