--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,15 +1,22 @@
 .popup__input {
   width: 100%;
-  margin: 0;
-  padding-top: 35px;
-  display: block;
+  margin: 0 0 30px;
+  padding: 0 0 13px;
+  box-sizing: border-box;
   border: none;
-  outline: none;
-  border-bottom: 1px solid #000;
-  opacity: .8;
-  font-family: 'Inter', Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  border-bottom: 1px solid rgba(0,0,0, .2);
+  color: #000;
+  font-family: inherit;
   font-size: 14px;
-  line-height: 1.2;
+  font-weight: 400;
+  line-height: 17px;
+}
+
+.popup__input:last-child {
+  margin: 0 0;
+}
+
+.popup__input:focus {
+  box-shadow: inset 0 -1px 0 0 rgba(0,0,0, .9);
+  outline: none;
 }
