--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,17 +1,36 @@
 .popup__submit {
   width: 100%;
   height: 50px;
-  margin: 57px 0 0;
+  margin: 18px 0 0;
+  padding: 0;
   display: block;
-  color: #fff;
-  cursor: pointer;
-  opacity: .8;
   text-align: center;
-  background-color: #000;
+  background-color: rgba(0,0,0, 1);
+  border: 1px solid #000;
+  border-radius: 2px;
+  color: #fff;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
   z-index: 1;
+}
+
+.popup__submit:hover {
+  background-color: rgba(0,0,0, .8);
+  cursor: pointer;
+}
+
+.popup__submit:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 450px) {
+  .popup__submit {
+    max-width: 100%;
+    margin: 15px 0 0;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
