--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,9 +1,12 @@
 .profile__avatar{
   grid-area: avatar;
   max-width: 120px;
+  max-height: 120px;
   justify-self: start;
   align-self: center;
   border-radius: 50%;
+  object-fit: cover;
+
 }
 
 @media screen and (max-width: 600px) {
