--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,8 +1,15 @@
 .gallery {
   max-width: 880px;
+  margin: 0 auto;
   padding-top: 50px;
 }
-  
+
+@media screen and (max-width: 1000px) {
+  .gallery {
+    max-width: 90%;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .gallery {
     padding: 36px 0 0;
@@ -12,7 +19,6 @@
 @media screen and (max-width: 560px) {
   .gallery {
     max-width: 100%;
-    padding: 36px 0 0 0;
-    margin: 0 auto;
+    padding: 40px 0 0 0;
   }
 }
