--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,18 +1,25 @@
 .profile {
+  max-width: 880px;
   margin: 0 auto;
   padding: 0;
   display: grid;
-  grid-template-columns: 169px auto max-content 1fr max-content;
+  grid-template: 70px 50px / 140px auto max-content 1fr max-content;
   grid-template-areas: 
     "avatar name edit . add"
     "avatar job . . add";
   column-gap: 10px;
 }
 
+@media screen and (max-width: 1000px) {
+  .profile  {
+    max-width: 90%;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .profile  {
     max-width: 100%;
-    grid-template-columns: auto auto;
+    grid-template: 130px 50px 35px 84px / auto auto;
     grid-template-areas:
       "avatar avatar"
       "name edit"
@@ -21,32 +28,3 @@
     gap: 5px;
   }
 }
-
-
-/* С Flex не получается 
-.profile {
-  max-width: 880px;
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media screen and (max-width: 780px) {
-  .profile {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 560px) {
-  .profile {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-  }
-}
-*/
