--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -1,8 +1,8 @@
 .element__button-like {
   max-width: 22px;
   max-height: 19px;
-  padding: 0 0 0 20px;
-  margin-top: 25px;
+  padding: 0 0 0 23px;
+  margin: 30px 0 0 14px;
   grid-column: 2/3;
   justify-self: center;
   align-self: stretch;
