--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,8 +7,16 @@
   padding: 0;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 768px) {
+  .footer__copyright {
+    font-size: 16px;
+    padding: 0 0 0 35px;
+  }
+}
+
+@media screen and (max-width: 450px) {
   .footer__copyright {
     font-size: 14px;
+    padding: 0 0 0 19px;
   }
 }
