--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
   width: 100%;
   margin: 0 0 30px;
-  padding: 0 0 13px;
+  padding: 0 0 12px;
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0,0,0, .2);
@@ -13,10 +13,18 @@
 }
 
 .popup__input:last-child {
-  margin: 0 0;
+  margin: 0 0 20px;
+  padding-bottom: 14px;
 }
 
 .popup__input:focus {
   box-shadow: inset 0 -1px 0 0 rgba(0,0,0, .9);
   outline: none;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__input:last-child {
+    margin: 0 0 0;
+    padding-bottom: 20px;
+  }
 }
