--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -29,7 +29,8 @@
 @media screen and (max-width: 450px) {
   .popup__submit {
     max-width: 100%;
-    margin: 15px 0 0;
+    height: 48px;
+    margin: 12px 0 0;
     font-size: 14px;
     line-height: 17px;
   }
