--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -2,8 +2,8 @@
   grid-area: edit;
   width: 24px;
   height: 24px;
-  padding: 0;
-  margin: 12px 0 0;
+  padding: 0 0 0;
+  margin: 22px 0 0 10px;
   align-self: center;
   justify-self: start;
   background: none;
@@ -29,6 +29,7 @@
     width: 18px;
     height: 18px;
     margin: 0;
-    padding-left: 10px;
+    padding-left: 18px;
+    margin-right: -18px;
   }
 }
