--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -27,27 +27,8 @@
     font-size: 27px;
     line-height: 2;
     justify-self: end;
-    align-self: center;
+    align-self: end;
+    padding: 0;
+    margin: 0 8px 0;
   }
 }
-
-/* Это для Flex
-.profile__name {
-  max-width: 90%;
-  margin: 0;
-  color: #fff;
-  font-size: 42px;
-  font-weight: 500;
-  line-height: 48px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-@media (max-width: 560px) {
-  .profile__name {
-    font-size: 27px;
-    line-height: 33px;
-  }
-}
-*/
