PR4 release 3.3 fixed most pixel perfect flaws

--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -19,6 +19,7 @@
 @media screen and (max-width: 560px) {
   .gallery {
     max-width: 100%;
-    padding: 40px 0 0 0;
+    margin-top: 10px;
+    padding: 0;
   }
 }
