--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -32,3 +32,14 @@
     margin: 0 8px 0;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .profile__name  {
+    font-size: 27px;
+    line-height: 2;
+    justify-self: end;
+    align-self: end;
+    padding: 0;
+    margin: 5px 8px 0;
+  }
+}
