--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -10,4 +10,5 @@
   background-image: linear-gradient(to bottom, #000, #000 10%, #fff 10%, #fff 100%);
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
