--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -30,13 +30,14 @@
   .profile__button-add {
     width: 282px;
     height: 50px;
-    justify-self: center;
     margin: -2px;
+    justify-self: center;
   }
 }
 
 @media screen and (max-width: 350px) {
   .profile__button-add {
     margin-top: -20px;
+    background-size: 16px 16px;
   }
 }
