--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,6 @@
 .element__image {
   width: 100%;
-  max-height: 282px;
+  height: 282px;
   grid-column: 1/3;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
