--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,4 +11,9 @@
   align-items: center;
   justify-content: center;
   visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s ease;
+  -webkit-transition: visibility 0.5s, opacity 0.5s ease;
+  -moz-transition: visibility 0.5s, opacity 0.5s ease;
+  -o-transition: visibility 0.5s, opacity 0.5s ease;
 }
