--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -10,6 +10,7 @@
     .profile {
       flex-direction: column;
       justify-content: center;
+      align-items: center;
       box-sizing: border-box;
     }
   }
