--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__container/popup__container-photo.css);
