--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,7 @@
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container-photo.css);
+@import url(../blocks/popup/__profile/popup__profile.css);
+@import url(../blocks/popup/__profile/_close/popup__profile_close.css);
+@import url(../blocks/popup/__element/popup__element.css
+
