--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,8 @@
 .element {
   min-width: 282px;
+  width: 100%;
   height: 361px;
-  margin: 0 auto;
+  margin: 0;
   list-style: none;
   display: grid;
   align-items: center;
@@ -10,6 +11,7 @@
   color: #000;
   background-image: linear-gradient(to bottom, #000, #000 10%, #fff 10%, #fff 100%);
   border-radius: 10px;
+  transition: all .5s ease;
   overflow: hidden;
   position: relative;
 }
