--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/gallery/gallery.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/element-template/element-template.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__image/element__image.css);
