--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,14 +1,14 @@
 .element__image {
-  width: 100%;
-  min-width: 282px;
+  width: 282px;
   height: 282px;
   grid-column: 1/3;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 310px) {
   .element__image {
-    max-width: 100%;
+    max-width: 282px;
+    width: 100%;
   }
 }
