--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,6 +1,6 @@
 .elements {
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   display: grid;
   justify-content: center;
@@ -10,15 +10,19 @@
   list-style: none;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .elements {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 18px;
+    justify-items: center;
+    justify-content: center;
   }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 700px) {
   .elements {
     grid-template-columns: 1fr;
+    justify-items: center;
+    justify-content: center;
   }
 }
