--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,5 +1,5 @@
 .profile__job {
-  max-width: 100%;
+  max-width: 80%;
   margin: 0;
   padding: 5px 0 36px 0;
   grid-area: job;
@@ -17,6 +17,7 @@
 @media screen and (max-width: 600px) {
   .profile__job  {
     justify-self: center;
+    max-width: 282px;
   }
 }
 
