--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,7 +1,7 @@
 .content {
   max-width: 880px;
   margin: 0 auto;
-  padding-top: 40px;
+  padding-top: 0;
 }
 
 @media screen and (max-width: 1000px) {
