--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -19,7 +19,6 @@
 @media screen and (max-width: 560px) {
   .gallery {
     max-width: 100%;
-    margin-top: 10px;
-    padding: 0;
+    padding: 36px 0 0;
   }
 }
