--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,6 +7,9 @@
   color:#fff;
   background-color: #000;
   box-sizing: border-box;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;  
 }
 
 @media screen and (max-width:1280px) {
