--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,17 +1,8 @@
-.profile__avatar{
-  grid-area: avatar;
-  max-width: 120px;
-  max-height: 120px;
-  justify-self: start;
-  align-self: center;
+.profile__avatar {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0;
+  padding: 0;
   border-radius: 50%;
   object-fit: cover;
-
-}
-
-@media screen and (max-width: 600px) {
-  .profile__avatar  {
-    width: 100%;
-    justify-self: center;
-  }
 }
