--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,15 +1,14 @@
 .profile__button-edit {
-  grid-area: edit;
   width: 24px;
   height: 24px;
-  padding: 0 0 0;
-  margin: 22px 0 0 10px;
-  align-self: center;
-  justify-self: start;
+  padding: 0;
+  margin: 0 0 3px;
+  flex: none;
   background: none;
+  background-size: 10px 10px;  
   background-image: url(../../../images/button-edit.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 50%;
   border: 1px solid #fff;
 }
 
@@ -18,18 +17,10 @@
   opacity: .6;
 }
 
-@media screen and (max-width: 768px) {
-  .profile__button-edit  {
-    padding-bottom: 8px;
-  }
-}
-
 @media screen and (max-width: 600px) {
   .profile__button-edit  {
     width: 18px;
     height: 18px;
-    margin: 0;
-    padding-left: 18px;
-    margin-right: -18px;
+    align-self: center;
   }
 }
