--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,5 +1,8 @@
 .profile__button {
   padding: 0;
+  margin: 0;
+  color: #fff;
+  box-shadow: none;
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
