--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,15 @@
 .profile__info {
-  padding: 0;
-  margin: 0;
+  max-width: calc(880px - 120px - 150px);
+  min-width: 0;
+  padding: 0 25px 0 0;
+  flex: 1 1 auto;
+}
+
+@media screen and (max-width: 600px) {
+  .profile__info {
+      max-width: calc(100% - 38px);
+      padding: 26px 0 36px;
+      align-self: center;
+      text-align: center;
+  }
 }
