--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,30 +1,22 @@
 .profile__job {
-  max-width: 80%;
+  max-width: 336px;
+  padding: 16px 0 0;
   margin: 0;
-  padding: 5px 0 36px 0;
-  grid-area: job;
-  justify-self: start;
-  align-self: start;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 1.22;
+  line-height: 22px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
 @media screen and (max-width: 600px) {
-  .profile__job  {
-    justify-self: center;
-    max-width: 282px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .profile__job  {
+  .profile__job {
+    padding: 14px 0 0;
+    margin: 0;
+    text-align: center;
     font-size: 14px;
-    padding: 0;
-    margin: -5px 0 26px;
+    line-height: 17px;
   }
 }
