PR6 release 0.2 validation not working(

--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -4,6 +4,7 @@
   grid-column: 1/3;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 310px) {
