--- a/blocks/popup/__container/popup__container-photo.css
+++ b/blocks/popup/__container/popup__container-photo.css
@@ -1,6 +1,7 @@
 .popup__container-photo {
-  max-width: 80vw;
+/*  max-width: 80vw;
   max-height: 80vh;
+*/
   padding: 0;
   margin: 0 auto;
   position: relative;
