--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  max-width: 430px;
+  width: 430px;
   padding: 36px;
   position: relative;
   background-color: #fff;
@@ -10,8 +10,15 @@
 
 @media screen and (max-width: 450px) {
   .popup__container {
-    min-width: 282px;
+    width: 282px;
     margin: 19px;
     padding: 26px 22px;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .popup__container {
+    width: 100%;
+    margin: 10px;
   }
 }
