--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -13,6 +13,7 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.5s ease;
+  z-index: 0;
   -webkit-transition: visibility 0.5s, opacity 0.5s ease;
   -moz-transition: visibility 0.5s, opacity 0.5s ease;
   -o-transition: visibility 0.5s, opacity 0.5s ease;
