--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
   width: 100%;
   display: block;
-  margin: 0 0 30px;
+  margin: 0;
   padding: 0 0 8px;
   box-sizing: border-box;
   border: none;
