--- a/blocks/popup/__label/popup__label.css
+++ b/blocks/popup/__label/popup__label.css
@@ -1,7 +1,7 @@
 .popup__label {
   width: 100%;
   padding: 0;
-  margin: 22px 0 0;
+  margin: 22px 0 30px;
   position: relative;
   display: flex;
   flex-direction: column;
