--- a/pages/index.css
+++ b/pages/index.css
@@ -33,10 +33,13 @@
 @import url(../blocks/popup/__fieldset/popup__fieldset.css);
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__field-error/popup__field-error.css);
 @import url(../blocks/popup/__field-error/_type/popup__field-error_type.css);
 @import url(../blocks/popup/__field-error/_active/popup__field-error_active.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/__submit/_invalid/popup__submit_invalid.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container-photo.css);
 @import url(../blocks/popup/__profile/popup__profile.css);
