PR6 release 2.1 review comments fixed

--- a/blocks/popup/__container/popup__container-photo.css
+++ b/blocks/popup/__container/popup__container-photo.css
@@ -1,7 +1,5 @@
 .popup__container-photo {
-/*  max-width: 80vw;
-  max-height: 80vh;
-*/
+  max-width: 75vw;
   padding: 0;
   margin: 0 auto;
   position: relative;
