--- a/blocks/form/__input-error/form__input-error.css
+++ b/blocks/form/__input-error/form__input-error.css
@@ -1,12 +1,10 @@
-.popup__field-error_active {
-  visibility: visible;
-  opacity: 1;
+.form__input-error {
   min-height: 37px;
   margin: 0;
   padding: 3px 0 0 0;
   box-sizing: border-box;
   color: red;
   font-weight: 400;
-  font-size: 10px;
-  line-height: 1.25;  
+  font-size: 12px;
+  line-height: 1.25;
 }
