--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url(../blocks/element/__button-like/_active/element__button-like_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_view-photo/popup_view-photo.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
