--- a/src/blocks/element/__like-container/element__like-container.css
+++ b/src/blocks/element/__like-container/element__like-container.css
@@ -1,5 +1,6 @@
 .element__like-container {
-  margin: 0px
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
