--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -4,6 +4,7 @@
     margin: 0 30px 0 0;
     padding: 0;
     flex: none;
+    position: relative;
 } 
   @media screen and (max-width: 600px) {
     .profile__image {
