--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 .content{margin:0 auto;max-width:880px;padding-top:0}@media screen and (max-width:1000px){.content{max-width:calc(100% - 38px)}}@media screen and (max-width:450px){.content{max-width:100%}}
 .profile{align-items:center;display:flex;flex-flow:row nowrap;justify-content:flex-start;margin:0 auto;max-width:880px;padding:40px 0 0}@media screen and (max-width:1000px){.profile{padding-left:19px;padding-right:19px}}@media screen and (max-width:600px){.profile{align-items:center;flex-direction:column}}
 .profile__avatar{border-radius:50%;margin:0;max-height:100%;max-width:100%;-o-object-fit:cover;object-fit:cover;padding:0}
-.profile__image{flex:none;height:120px;margin:0 30px 0 0;padding:0;width:120px}@media screen and (max-width:600px){.profile__image{margin:0}}
+.profile__avatar-edit{background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border-radius:47%;bottom:0;left:0;opacity:0;position:absolute;right:0;top:0;transition:all .4s}.profile__avatar-edit:hover{background-color:rgba(0,0,0,.8);cursor:pointer;opacity:1}
+.profile__image{flex:none;height:120px;margin:0 30px 0 0;padding:0;position:relative;width:120px}@media screen and (max-width:600px){.profile__image{margin:0}}
 .profile__info{flex:1 1 auto;max-width:610px;min-width:0;padding:0 25px 0 0}@media screen and (max-width:600px){.profile__info{align-self:center;max-width:calc(100% - 38px);padding:26px 0 36px;text-align:center}}
 .profile__user{align-items:flex-end;display:flex;flex-flow:row nowrap;max-width:336px;text-align:left}@media (max-width:600px){.profile__user{margin:0;padding:0}}
 .profile__name{align-self:center;font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0;overflow:hidden;padding:0 18px 0 0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:600px){.profile__name{font-size:27px;line-height:33px;padding-right:10px;text-align:center}}
@@ -23,6 +24,8 @@
 .element__button-delete{background:none;background-image:url(74cb54db527907ac17bb.svg);border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;width:18px;z-index:1}.element__button-delete:hover{opacity:.5}
 .element__button-like{align-self:stretch;background-color:#fff;background-image:url(30b05ee28fd82b5603a6.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:none;grid-column:2/3;justify-self:center;margin:30px 0 0 14px;max-height:19px;max-width:22px;padding:0 0 0 23px}.element__button-like:focus{outline:none}.element__button-like:hover{cursor:pointer;opacity:.5}
 .element__button-like_active{background-image:url(fe17a515669479b1e649.svg)}.element__button-like_active:hover{cursor:pointer;opacity:.5}
+.element__likes-count{font-size:13px;font-weight:400;line-height:16px;margin:3px 0 0}
+.element__like-container{align-items:center;display:flex;flex-direction:column;margin:0;padding:0}
 .footer{margin:0 auto;max-width:880px;padding:65px 0 60px}@media screen and (max-width:1000px){.footer{max-width:90%;padding:55px 0 45px}}@media screen and (max-width:450px){.footer{margin:0;max-width:100%;padding:45px 0 35px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:1.22;margin:0;padding:0}@media screen and (max-width:768px){.footer__copyright{font-size:16px;padding:0 0 0 35px}}@media screen and (max-width:450px){.footer__copyright{font-size:14px;padding:0 0 0 19px}}
 .form__input-error{box-sizing:border-box;color:red;font-size:12px;font-weight:400;line-height:1.25;margin:0;min-height:37px;padding:3px 0 0}
