--- a/src/blocks/element/__button-like/_active/element__button-like_active.css
+++ b/src/blocks/element/__button-like/_active/element__button-like_active.css
@@ -1,5 +1,8 @@
 .element__button-like_active {
   background-image: url(../../../../images/button-like-black.svg);
+  transform: scale(1.2);
+/*   transition: 0.5s transition mode to add ; */
+  color: rgb(172, 10, 10);
 }
 
 .element__button-like_active:hover {
