--- a/src/blocks/element/__button-like/element__button-like.css
+++ b/src/blocks/element/__button-like/element__button-like.css
@@ -1,8 +1,8 @@
 .element__button-like {
-  max-width: 22px;
-  max-height: 19px;
-  padding: 0 0 0 23px;
-  margin: 30px 0 0 14px;
+  width: 22px;
+  height: 19px;
+  padding: 0 0 0 0;
+  margin: auto 0 0 auto;
   grid-column: 2/3;
   justify-self: center;
   align-self: stretch;
@@ -11,7 +11,8 @@
   background-size: contain;
   background-repeat: no-repeat;
   border: none;
-  background-color: #fff;
+  background-color: transparent;
+  z-index: 1;
 }
 
 .element__button-like:focus {
